--- a/app/18docking/docking/corridorproductdetail.html
+++ b/app/18docking/docking/corridorproductdetail.html
@@ -4,12 +4,11 @@
 </div>
 <div class="modal-body">
 
-<div class="container-fluid">
+<div class="container-fluid form-horizontal">
     
     <div class="form-group" >
-    	<label class="col-xs-1 control-label"></label>
         <label class="col-xs-3 control-label">商品详情</label>
-        <div class="col-xs-8" >
+        <div class="col-xs-7" >
             <p class="form-control-static">{{obj.Details}}</p>
         </div>
     </div>
@@ -17,9 +16,8 @@
 
    
     <div class="form-group" >
-    	<label class="col-xs-1 control-label"></label>
         <label class="col-xs-3 control-label">注意事项</label>
-        <div class="col-xs-8" >
+        <div class="col-xs-7" >
             <p class="form-control-static">{{obj.Attention}}</p>
         </div>
     </div>
