'修改对接去哪接口调用'

--- a/app/18docking/docking/qunaexamineback.html
+++ b/app/18docking/docking/qunaexamineback.html
@@ -8,6 +8,6 @@
     <div class="text-center" style="color:red;"><h2>退款申请是否通过审核？</h2></div>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" type="button" ng-click="ok()">通过</button>
-    <button class="btn btn-warning" type="button" ng-click="cancel()">不通过</button>
+	<button class="btn btn-primary" type="button" ng-click="first('1')">通过</button>
+    <button class="btn btn-warning" type="button" ng-click="first('2')">不通过</button>
 </div>
