--- a/app/18docking/docking/huaxiaplproduct.html
+++ b/app/18docking/docking/huaxiaplproduct.html
@@ -16,13 +16,13 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="text-center">商品编号</th>
-        <th class="text-center">商品名称</th>
-        <th class="text-center">供应商编号</th>
-        <th class="text-center">供应商名称</th>
-        <th class="text-center">门市价</th>
-        <th class="text-center">结算价</th>
-        <th class="text-center">有效天数</th>
+        <th class="text-center col-md-1">商品编号</th>
+        <th class="text-center col-md-5">商品名称</th>
+        <th class="text-center col-md-1">供应商编号</th>
+        <th class="text-center col-md-2">供应商名称</th>
+        <th class="text-center col-md-1">门市价</th>
+        <th class="text-center col-md-1">结算价</th>
+        <th class="text-center col-md-1">有效天数</th>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
